cambio de Arrays.asArray a List.of